--- a/poker.html
+++ b/poker.html
@@ -3,7 +3,7 @@
 <style>
 p {color: white}
 body {background-color: #047911}
-img {width: 50px; margin: 5px}
+img {width: 50px; height: 73px; margin: 5px}
 </style>
 
 <p>
@@ -16,8 +16,7 @@ img {width: 50px; margin: 5px}
 <p id="errorMessage" style="visibility:hidden; color:red">
   Pick a real card
 </p>
-<img id="image">
-<br>
+<img id="image" style="visibility:hidden">
 
 <script>
 document.getElementById('button').onclick = showCard;
