changed display text

--- a/poker.html
+++ b/poker.html
@@ -9,7 +9,7 @@ img {width: 50px; height: 73px; margin: 5px}
 </style>
 
 <p>
-  Pick a card (e.g. 6H for the 6 of Hearts)
+  Pick a card (e.g. 6H for the 6 of Hearts) or click on Full Deck!
   <br><br>
   <input id="card"></input>
   <button id="button">Display!</button>
