removed image element for random card 2

--- a/poker.html
+++ b/poker.html
@@ -19,11 +19,11 @@ img {width: 50px; height: 73px; margin: 5px}
 <p id="errorMessage" style="visibility:hidden; color:red">
   Pick a real card
 </p>
-My card|Random Card|
+My card | Random Card
 <br>
 <img id="myCard">
 <img id="random1">
-<img id="random2">
+<!--<img id="random2">-->
 <br>
 
 <script>
