increased image size of top cards by 1.5x, added borders

--- a/poker.html
+++ b/poker.html
@@ -5,7 +5,8 @@
 p {color: white}
 body {background-color: #047911}
 img {width: 50px; height: 73px; margin: 5px}
-#myCard {border: black}
+#myCard {border: solid black; width: 75px; height: 109.5px}
+#random1 {border: solid black; width: 75px; height: 109.5px}
 </style>
 
 <p>
@@ -19,7 +20,7 @@ img {width: 50px; height: 73px; margin: 5px}
 <p id="errorMessage" style="visibility:hidden; color:red">
   Pick a real card
 </p>
-My card | Random Card
+My card_____Random Card
 <br>
 <img id="myCard">
 <img id="random1">
