centered table text

--- a/poker.html
+++ b/poker.html
@@ -5,9 +5,10 @@
 p {color: white}
 body {background-color: #047911}
 img {width: 50px; height: 73px; margin: 5px}
-#myCard {border: solid black; width: 75px; height: 109.5px}
-#random1 {border: solid black; width: 75px; height: 109.5px}
-#random2 {border: solid black; width: 75px; height: 109.5px}
+#myCard {border: solid black; width: 75px; height: 109.5px; marin: 0}
+#random1 {border: solid black; width: 75px; height: 109.5px; marin: 0}
+#random2 {border: solid black; width: 75px; height: 109.5px; marin: 0}
+#topTable {text-align: center}
 
 </style>
 
@@ -22,7 +23,7 @@ img {width: 50px; height: 73px; margin: 5px}
 <p id="errorMessage" style="visibility:hidden; color:red">
   Pick a real card
 </p>
-<table>
+<table id="topTable">
   <tr>
     <td>My card:</td>
     <td>Random 1:</td>
