--- a/poker.html
+++ b/poker.html
@@ -5,9 +5,9 @@
 p {color: white}
 body {background-color: #047911}
 img {width: 50px; height: 73px; margin: 5px}
-#myCard {border: solid black; width: 75px; height: 109.5px; marin: 0}
-#random1 {border: solid black; width: 75px; height: 109.5px; marin: 0}
-#random2 {border: solid black; width: 75px; height: 109.5px; marin: 0}
+#myCard {width: 75px; height: 109.5px; margin: 0}
+#random1 {width: 75px; height: 109.5px; margin: 0}
+#random2 {width: 75px; height: 109.5px; margin: 0}
 #topTable {text-align: center}
 
 </style>
