--- a/poker.html
+++ b/poker.html
@@ -158,7 +158,7 @@ img {width: 50px; height: 73px; margin: 5px}
     if (turn==r1||turn==r2||turn==f1||turn==f2||turn==f3){
       dealTurn();
     } else {
-      document.getElementById('turn').src = f1;
+      document.getElementById('turn').src = turn;
     }
     document.getElementById('randomButton').textContent = "River";
     document.getElementById('randomButton').onclick = dealRiver;
