fixed button and description

--- a/poker.html
+++ b/poker.html
@@ -7,18 +7,19 @@ body {background-color: #047911}
 img {width: 50px; height: 73px; margin: 5px}
 .card {width: 75px; height: 109.5px; margin: 0}
 #topTable {text-align: center}
+#randomButton {text-align: center; width: 100px}
 .emptyCell {width: 25px}
 .emptyImage {width: 75px}
 .emptyRow {height: 30px}
 </style>
 
 <p>
-  Pick a card (e.g. 6H for the 6 of Hearts), the full deck, or random cards!
+  Pick a card (e.g. 6H for the 6 of Hearts), dispaly the full deck, or play Texas hold'em for hours by yourself.
   <br><br>
   <input id="card"></input>
   <button id="button">Display!</button>
   <button id="fullDeck">Full Deck!</button>
-  <button id="randomButton">Deal!</button>
+  <button id="randomButton">Texas hold'em</button>
 </p>
 <p id="errorMessage" style="visibility:hidden; color:red">
   Pick a real card
