--- a/poker.html
+++ b/poker.html
@@ -2,7 +2,7 @@
 <body>
 
 <style>
-p {color: white}
+p {color: black}
 body {background-color: #047911}
 img {width: 50px; height: 73px; margin: 5px}
 .card {width: 75px; height: 109.5px; margin: 0}
@@ -14,7 +14,7 @@ img {width: 50px; height: 73px; margin: 5px}
 </style>
 
 <p>
-  Pick a card (e.g. 6H for the 6 of Hearts), dispaly the full deck, or play Texas hold'em for hours by yourself.
+  Pick a card (e.g. 6H for the 6 of Hearts), dispaly the full deck, or play Texas hold'em by yourself..for hours.
   <br><br>
   <input id="card"></input>
   <button id="button">Display!</button>
@@ -26,10 +26,10 @@ img {width: 50px; height: 73px; margin: 5px}
 </p>
 <table id="topTable">
   <tr>
-    <td>My card:</td>
+    <td>Selected:</td>
     <td class="emptyCell"></td>
-    <td>Random 1:</td>
-    <td>Random 2:</td>
+    <td>Card 1:</td>
+    <td>Card 2:</td>
   </tr>
   <tr>
     <td><img id="myCard" class="card"></td>
@@ -72,7 +72,7 @@ img {width: 50px; height: 73px; margin: 5px}
     var card = document.getElementById('card').value;
     if (!(matcher.test(card))) {
       errorMessage.style.visibility = 'visible';
-      myCard.style.visibility = 'hidden';
+      myCard.visibility = 'hidden';
       myCard.src = '';
       return;
     }
