--- a/poker.html
+++ b/poker.html
@@ -118,13 +118,9 @@ img {width: 50px; height: 73px; margin: 5px}
   //console.log(randomizer())
   document.getElementById('randomButton').onclick = dealCards;
 
-  var r1;
-  var r2;
-  var f1;
-  var f2;
-  var f3;
-  var turn;
-  var river;
+  var r1, r2;
+  var f1, f2, f3;
+  var turn, river;
 
   function dealCards() {
     r1 = randomizer(r1);
