--- a/SandBox.html
+++ b/SandBox.html
@@ -15,6 +15,7 @@
 const SUITS = 'CDHS';
 const FACES = 'JQKA';
 
+// returns a new array with all cards in the deck sorted by suit
 function fullDeck() {
   var result = [];
   for (var j=0; j<4; j++) {
@@ -31,11 +32,12 @@ function fullDeck() {
 }
 var cards = fullDeck();
 
-
+// returns a random item in array cards
 function randomizer() {
   return cards[randomInt(cards.length)];
 }
 
+// returns a random num [0 , limit)
 function randomInt(limit){
   return Math.floor(limit * Math.random());
 }
@@ -43,6 +45,7 @@ function randomInt(limit){
 
 var board = [];
 
+// 
 function dealCards(number) {
   if (number > cards.length){
     throw 'error: not enough cards.';
@@ -54,6 +57,8 @@ function dealCards(number) {
 
 dealCards(52);
 
+
+// Assigns random cards into array board and ensures there are no duplicates
 function createBoard() {
   for (var i = 0; i < board.length; i++) {
     board[i]=randomizer();
